--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:id="@+id/mainViewGroup">
+    android:id="@+id/mainViewGroup"
+    android:orientation="vertical">
 
 
     <ImageView
@@ -17,7 +18,8 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="onTakePictureClick"/>
+        android:onClick="onTakePictureClick"
+        android:text="main activity submit"/>
 
 
 
