--- a/app/src/main/res/layout/activity_editing.xml
+++ b/app/src/main/res/layout/activity_editing.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditingActivity"
+    tools:context=".CroppingActivity"
     android:id="@+id/mainViewGroup"
     android:orientation="vertical">
 
