--- a/app/src/main/res/layout/editing_layout.xml
+++ b/app/src/main/res/layout/editing_layout.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/grey"
-    tools:context="com.example.picturemashup.flickrImageSearchActivity">
+    tools:context="com.example.picturemashup.EditingActivity">
 
     <TextView
         android:typeface="serif"
@@ -27,20 +27,12 @@
         android:layout_width="375dp"
         android:layout_gravity="center"
         android:background="@color/colorPrimary"
-        android:layout_height="500dp"  >
+        android:layout_height="400dp"  >
 
-        <TextView
-            android:layout_width="240dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="75dp"
-            android:gravity="center"
-            android:text="**background should appear here**"
-            android:textColor="@color/colorAccent"
-            android:textSize="35sp"
-            android:typeface="serif" >
-
-        </TextView>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="300dp"
+            android:id="@+id/pasteImage" />
 
     </LinearLayout>
 
@@ -56,8 +48,9 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_marginLeft="18dp"
-            android:src="@drawable/cam_foreground"
-            android:background="@color/colorPrimary" >
+            
+            android:onClick="launchCameraIntent"
+            android:background="@color/colorPrimaryDark" >
         </ImageButton>
 
         <Button
@@ -76,7 +69,7 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_marginLeft="52dp"
-            android:src="@drawable/share_foreground"
+
             android:background="@color/colorPrimary" >
         </ImageButton>
 
