--- a/app/src/main/res/layout/editing_layout.xml
+++ b/app/src/main/res/layout/editing_layout.xml
@@ -17,7 +17,7 @@
         android:text="@string/app_name"
         android:layout_marginTop="10dp"
         android:textColor="@color/title"
-        android:textSize="40dp"
+        android:textSize="50dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,7 +27,7 @@
         android:layout_marginTop="20dp"
         android:layout_width="375dp"
         android:layout_gravity="center"
-        android:background="@color/colorPrimary"
+        android:background="@color/colorPrimaryDark"
         android:layout_height="400dp"  >
 
         <ImageView
@@ -41,17 +41,17 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="20dp"
         android:layout_height="100dp"
         android:orientation="horizontal" >
 
         <ImageButton
-            android:layout_width="90dp"
-            android:layout_height="90dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_marginLeft="18dp"
-
-            android:onClick="launchCameraIntent"
-            android:background="@color/colorPrimaryDark" >
+            android:src="@drawable/camera_foreground"
+            android:background="@color/colorPrimaryDark"
+            android:onClick="launchCameraIntent" >
         </ImageButton>
 
         <Button
@@ -65,11 +65,13 @@
             android:textSize="20dp" ></Button>
 
         <ImageButton
-            android:layout_width="90dp"
-            android:layout_height="90dp"
-            android:layout_marginLeft="52dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="30dp"
+            android:src="@drawable/share_foreground"
+            android:background="@color/colorPrimaryDark"
             android:onClick="launchShareIntent"
-            android:background="@color/colorPrimary" >
+             >
         </ImageButton>
 
     </LinearLayout>
