--- a/app/src/main/res/layout/activity_cropping.xml
+++ b/app/src/main/res/layout/activity_cropping.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".CroppingActivity"
     android:id="@+id/mainViewGroup"
+    android:background="@color/grey"
     android:orientation="vertical">
 
     <ScrollView
@@ -23,10 +24,15 @@
                 android:id="@+id/composite"/>
 
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="3dp"
+                android:layout_width="150dp"
+                android:layout_height="70dp"
+                android:typeface="serif"
                 android:onClick="onCropSubmit"
-                android:text="editing view submit"/>
+                android:textSize="35dp"
+                android:background="@color/colorPrimaryDark"
+                android:text="DONE"/>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
