--- a/app/src/main/res/layout/activity_search_menu.xml
+++ b/app/src/main/res/layout/activity_search_menu.xml
@@ -30,6 +30,11 @@
         android:layout_height="75dp"
       />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal" >
+
     <Button
         android:layout_width="150dp"
         android:layout_height="50dp"
@@ -37,6 +42,18 @@
         android:layout_marginLeft="15dp"
         android:background="@color/colorPrimaryDark"
         android:onClick="getJson" />
+    <Button
+        android:layout_width="150dp"
+        android:layout_marginTop="2dp"
+        android:id="@+id/button"
+        android:layout_height="50dp"
+        android:onClick="helpPage"
+        android:text="HELP"
+        android:layout_marginLeft="80dp"
+        android:background="@color/colorPrimaryDark"
+        />
+
+    </LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
